[package]
name = "sqlite"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.3"
[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]